--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=your_mongodb_connection_string_here
+MONGO_URI=mongodb+srv://sachinp1610_db_user:Sachin12345@cluster0.4vez6oq.mongodb.net/orderlogistics?retryWrites=true&w=majority&appName=Cluster0&authSource=admin
 JWT_SECRET=your_secret_here
